k3s-deploy/hyperion-stack-deploy/kibana-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
      name: http
